# pro-ai-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/windows/: ProAiServer.Desktop.csproj  Program.cs
docs/: ARCHITECTURE.md  CLI_WORKFLOW.md  CODEX_MVP_BASELINE.md  KNOWLEDGE.md  RELEASE.md  THREAT_MODEL.md  TROUBLESHOOTING.md
embedded-tools/: README.md
policies/: default.policy.json  demo.policy.json  strict.policy.json
scripts/: build-desktop-app.ps1  create-desktop-shortcut.ps1  download-platform-tools.ps1  launch-ui.ps1  launch-ui.vbs
src/droidshield/: agentic.py  cli.py  continue_config.py  device_scan.py  diagnostics.py  gateway.py  gateway_api.py  monitoring.py  node_runtime.py  ollama.py  packaging.py  policy.py  release_validation.py  script_delivery.py  setup_receipt.py  setup_workflow.py  status.py  termux_scripts.py  web.py
src/pro_ai_server/: cli.py  diagnostics.py  status.py  (+5 more)
tests/: test_adb.py  test_adb_device_selection.py  test_android_optimization.py  test_cli_workflows.py  test_continue_config.py  test_device_scan.py  test_diagnostics.py  test_docs.py  test_gateway_api.py  test_gateway_architecture.py  test_hardware_scan.py  test_ide_detection.py  test_model_plan.py  test_ollama.py  test_packaging.py  test_policy_engine.py  test_profile_selection.py  test_profiles.py  test_release_validation.py  test_script_delivery.py  test_setup_receipt.py  test_setup_workflow.py  test_status.py  test_tailscale_mode.py  test_tailscale_setup.py  test_termux_readiness.py  test_termux_scripts.py  test_termux_widget.py  test_web_ui.py
(+9 files in other folders)
