[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droidshield"
version = "0.1.0"
description = "Isolated Android sandbox nodes for autonomous AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.5",
  "rich>=13.7.1",
  "PyYAML>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
droidshield = "droidshield.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
droidshield = ["embedded-tools/**", "ui/**"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
